Add missing #include <array>

BUG: 433517